# satellite-plot

./: CMakeLists.txt
src/: calib_results.txt  draw_satellites.cpp  draw_satellites.hpp  main.cpp  ocam_model.cpp  ocam_model.hpp  read_dump_files.cpp  read_dump_files.hpp  satellite_plot.cpp  satellite_plot.hpp  util.cpp  util.hpp
